--- a/main.css
+++ b/main.css
@@ -1,3 +1,11 @@
 body, h1, p, a {
   font-family: 'Oswald', "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+.content {
+  max-width: 860px;
+  margin: auto;
+}
+
+.header-image {
+  text-align: center;
+}
