--- a/main.css
+++ b/main.css
@@ -23,3 +23,18 @@ body, h1, p, a {
 .presents section {
   border-bottom: 1px solid black;
 }
+
+.presents section h1 {
+  font-size: 1.6em;
+  font-weight: bold;
+}
+
+.presents section .price {
+  font-size: 1.4em;
+  margin-top: 20px;
+  text-align: right;
+}
+
+.presents section .btn-group {
+  text-align: right;
+}
