--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ body, h1, p, a {
   font-family: 'Oswald', "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .content {
-  max-width: 860px;
+  max-width: 680px;
   margin: auto;
   margin-bottom: 2em;
 }
@@ -13,7 +13,7 @@ body, h1, p, a {
 
 .welcome {
   font-size: 1.4em;
-  border-bottom: 1px solid black;
+  border-bottom: 1px dotted rgba(0, 0, 0, 0.1);
 }
 
 .account {
@@ -21,7 +21,7 @@ body, h1, p, a {
 }
 
 .presents section {
-  border-bottom: 1px solid black;
+  border-bottom: 1px dotted rgba(0, 0, 0, 0.1);
   padding-bottom: .7em;
 }
 
