--- a/assets/main.css
+++ b/assets/main.css
@@ -14,6 +14,7 @@ body, h1, p, a {
 .welcome {
   font-size: 1.4em;
   border-bottom: 1px dotted rgba(0, 0, 0, 0.1);
+  padding-bottom: 20px;
 }
 
 .account {
